--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .ipynb_checkpoints/*
 utils/.ipynb_checkpoints/bigbord-checkpoint.py
 utils/__pycache__/bigbord.cpython-38.pyc
+attachments.zip
+utils/.ipynb_checkpoints/kvalue2-checkpoint.py
